--- a/FeedRadar.xcodeproj/xcshareddata/xcschemes/FeedRadarTests.xcscheme
+++ b/FeedRadar.xcodeproj/xcshareddata/xcschemes/FeedRadarTests.xcscheme
@@ -36,6 +36,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "CEDEC5C82B0650F700D83636"
+            BuildableName = "FeedRadar.app"
+            BlueprintName = "FeedRadar"
+            ReferencedContainer = "container:FeedRadar.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -43,6 +53,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "CEDEC5C82B0650F700D83636"
+            BuildableName = "FeedRadar.app"
+            BlueprintName = "FeedRadar"
+            ReferencedContainer = "container:FeedRadar.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
