--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,7 +18,5 @@ jobs:
         run: git submodule init && git submodule update
       - name: Select Xcode 15.1
         run: sudo xcode-select -s /Applications/Xcode_15.1.app/Contents/Developer
-      - name: Build
-        run: xcodebuild build-for-testing -scheme "FeedRadarTests" -destination "platform=iOS Simulator,name=iPhone 14,OS=17.2" | xcbeautify
       - name: Test
-        run: xcodebuild test-without-building -scheme "FeedRadarTests" -destination "platform=iOS Simulator,name=iPhone 14,OS=17.2" | xcbeautify
+        run: xcodebuild test -scheme "FeedRadarTests" -destination "platform=iOS Simulator,name=iPhone 14,OS=17.2" | xcbeautify
