--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Submodules/Readability"]
-	path = Submodules/Readability
+[submodule "Core/Readability"]
+	path = Core/Readability
 	url = https://github.com/mozilla/readability.git
