--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,18 +5,18 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
 jobs:
   build_and_test:
-    name: Build and Test
-    runs-on: macos-13
-
+    name: Test Core
+    runs-on: macos-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Initialise Submodule
         run: git submodule init && git submodule update
-      - name: Select Xcode 15.1
-        run: sudo xcode-select -s /Applications/Xcode_15.1.app/Contents/Developer
+      - name: Change Directory
+        run: cd Core
+      - name: Build
+        run: swift build
       - name: Test
-        run: xcodebuild test -scheme "FeedRadarTests" -destination "platform=iOS Simulator,name=iPhone 14,OS=17.2" | xcbeautify
+        run: swift test
