--- a/.github/workflows/docc.yml
+++ b/.github/workflows/docc.yml
@@ -19,6 +19,7 @@ jobs:
           swift package generate-documentation \
             --target Core \
             --symbol-graph-minimum-access-level internal \
+            --hosting-base-path https://github.com/levitatingpineapple/feed-radar \
             --disable-indexing \
             --transform-for-static-hosting \
             --warnings-as-errors
